# IL2CPP-injection-template

./: .gitignore  CMakeLists.txt  build.bat
include/Il2cpp_Resolver/Functions/: Thread.hpp
include/Il2cpp_Resolver/Unity/API/: Component.hpp  Object.hpp
include/Il2cpp_Resolver/Utils/: Helper.hpp
include/ThreadPool/: pool.hpp
include/imgui/: imgui_impl_win32.cpp  imgui_impl_win32.h
include/kiero/: Dumper.hpp  Lists.hpp  Rendering.hpp  functions.h  includes.h  sdk.cpp  sdk.h  vec.h
include/minhook/src/: hook.h  trampoline.c  trampoline.h
include/template/: gui.hpp  menu.hpp
include/template/pages/: tests.hpp  visual.hpp
include/template/utils/: utils.hpp  variables.hpp
src/: gui.cpp  gui.hpp  main.cpp  menu.cpp  menu.hpp
src/pages/: __general.hpp  tests.cpp  tests.hpp  visual.cpp  visual.hpp
src/utils/: Font.h  types.cpp  types.hpp  utils.cpp  utils.hpp  variables.cpp  variables.hpp
